# SVDPCA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  pca_test.cpp  problem1.cpp  problem2.cpp  svd_test.cpp  svdpca-problem1-data.csv
include/: csv.h  helpers.h  immatrix.h  pca.h  svd.h
src/: csv.cpp  helpers.cpp  immatrix.cpp  pca.cpp  svd.cpp
